# ai-interview-preparation-copilot

./: .gitignore  pyproject.toml  test_config.py  test_db.py  test_password.py
alembic/: env.py  env_backup.py
alembic/versions/: e8b169a02303_create_users_table.py
app/: main.py
app/api/: test.py
app/api/v1/: auth.py  users.py
app/core/config/: settings.py
app/core/database/: base_model.py  session.py
app/core/db/: session.py
app/core/dependencies/: auth.py  database.py
app/core/security/: jwt.py
app/enums/: user_role.py
app/models/: user.py
app/repositories/: user_repository.py
app/schemas/: user.py
app/services/: auth_service.py
docs/: 01-prd.md  02-srs.md  03-HLD.md  04-LLD.md
